fix overflow mobile version

--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -1,6 +1,8 @@
-.title{
+.central-column{
     
     text-align: center;
+    max-width: 100vw;
+
 
 
 }
