--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,12 @@ body {
   color: $color-white;
   background-color: #263650;
 
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+
+  width: 100vw;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
